--- a/landing-page.css
+++ b/landing-page.css
@@ -24,6 +24,7 @@ body {
 }
 
 .hamburger {
+  cursor: pointer;
   width: 4.75rem;
 }
 
@@ -31,6 +32,11 @@ body {
   font-family: "Koulen", cursive;
   font-size: 1.5rem;
   letter-spacing: 0.125rem;
+}
+
+.logo a {
+  color: black;
+  text-decoration: none;
 }
 
 .logo span {
@@ -49,16 +55,17 @@ body {
   height: 2.25rem;
   width: 100%;
   transform: skewX(-10deg);
-  background-color: #4863a0;
+  background-color: #14279b;
 }
 
 .btn-join {
+  cursor: pointer;
   font-weight: 700;
   font-size: 1rem;
   padding: 0.5rem 0.5rem;
-  border: 0.125rem solid #4863a0;
+  border: 0.125rem solid #3d56b2;
   border-radius: 0.625rem;
-  color: #4863a0;
+  color: #3d56b2;
   background-color: transparent;
 }
 
@@ -66,14 +73,17 @@ body {
   width: 100%;
 }
 
-.main-content-container {
+.introduction-container {
+  padding-bottom: 2rem;
+  background-color: #3d56b2;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.main-content-container h1 {
-  padding: 2rem;
+.introduction-container h1 {
+  color: #ffffff;
+  padding: 1.5rem;
   text-align: center;
 }
 
@@ -85,6 +95,7 @@ body {
 }
 
 .find-btn {
+  cursor: pointer;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   font-size: 1.125rem;
@@ -92,13 +103,55 @@ body {
   border-radius: 2rem;
 }
 
-.work {
+.btn-work {
   color: #ffffff;
-  background-color: #4863a0;
-  border: 0.125rem solid #4863a0;
+  background-color: #5c7aea;
+  border: 0.125rem solid #5c7aea;
 }
 
-.service {
-  color: #4863a0;
-  border: 0.125rem solid #4863a0;
+.btn-service {
+  color: #ffffff;
+  border: 0.125rem solid #ffffff;
+}
+
+.services-container {
+  padding: 2rem 0rem;
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.services-container h2 {
+  padding-bottom: 1rem;
+}
+
+.service-cards {
+  width: 100%;
+  overflow-x: hidden;
+  display: flex;
+}
+
+.service-cards img {
+  width: 100%;
+}
+
+.btn-slide {
+  color: #e6e6e6;
+  opacity: 0.5;
+  background-color: transparent;
+  border: none;
+}
+
+.btn-slide-right {
+  position: absolute;
+  bottom: 8.5rem;
+  left: 0;
+}
+
+.btn-slide-left {
+  position: absolute;
+  bottom: 8.5rem;
+  right: 0;
 }
