--- a/landing-page.css
+++ b/landing-page.css
@@ -128,6 +128,7 @@ body {
 }
 
 .service-cards {
+  padding-bottom: 1rem;
   position: relative;
   width: 100%;
   overflow: hidden;
@@ -136,7 +137,7 @@ body {
 .service-cards figure {
   display: flex;
   width: 100%;
-  transition: all 0.4s ease-in-out;
+  animation: services-slide 10s ease-in-out infinite;
 }
 
 .labels {
@@ -161,23 +162,80 @@ body {
   width: 100%;
 }
 
-.btn-slide {
-  color: #ffffff;
-  opacity: 0.8;
-  background-color: transparent;
-  border: none;
+@keyframes services-slide {
+  /* 1st img */
+  0% {
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(0%);
+  }
+
+  /* 2nd img */
+  25% {
+    transform: translateX(-100%);
+  }
+  45% {
+    transform: translateX(-100%);
+  }
+
+  /* 3rd img */
+  50% {
+    transform: translateX(-200%);
+  }
+  70% {
+    transform: translateX(-200%);
+  }
+
+  /* 4th img */
+  75% {
+    transform: translateX(-300%);
+  }
+
+  95% {
+    opacity: 1;
+    transform: translateX(-300%);
+  }
+
+  /* Ending Animation */
+  96% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(0%);
+  }
+}
+
+.services-container h3 {
+  color: #3d56b2;
+  width: 90%;
+  font-size: 1.25rem;
   position: relative;
 }
 
-.btn-slide-left {
-  display: none;
+.services-container h3::after {
   position: absolute;
-  top: 60%;
-  left: 0.25rem;
+  content: "";
+  bottom: -20%;
+  right: 5%;
+  background-color: #e6e6e6;
+  height: 0.125rem;
+  width: 90%;
 }
 
-.btn-slide-right {
-  position: absolute;
-  top: 60%;
-  right: 0.25rem;
+.services-container p {
+  width: 90%;
+  padding: 1rem 0;
+}
+
+.btn-more-services {
+  cursor: pointer;
+  padding: 0.5rem 1.25rem;
+  background-color: transparent;
+  color: #5c7aea;
+  border: 0.125rem solid #5c7aea;
+  border-radius: 0.5rem;
+  font-size: 1.125rem;
+  font-weight: 700;
 }
