--- a/landing-page.css
+++ b/landing-page.css
@@ -43,16 +43,15 @@ body {
   }
 
   95% {
-    opacity: 1;
+    filter: blur(0);
     transform: translateX(-300%);
   }
 
   /* Ending Animation */
   96% {
-    opacity: 0;
+    filter: blur(1rem);
   }
   100% {
-    opacity: 0;
     transform: translateX(0%);
   }
 }
@@ -72,7 +71,7 @@ body {
 
 .hamburger {
   cursor: pointer;
-  width: 4.5rem;
+  width: 5.25rem;
 }
 
 .logo {
@@ -105,15 +104,32 @@ body {
   background-color: #14279b;
 }
 
-.btn-join {
+.search {
+  display: none;
+}
+
+.user-login {
+  display: flex;
+  gap: 1rem;
+}
+
+.user-login button {
   cursor: pointer;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+  font-family: "Poppins", sans-serif;
   font-weight: 700;
-  font-size: 1rem;
-  padding: 0.5rem 0.5rem;
-  border: 0.125rem solid #3d56b2;
-  border-radius: 0.625rem;
-  color: #3d56b2;
+  font-size: 0.875rem;
+}
+
+.btn-login {
+  color: #5c7aea;
   background-color: transparent;
+  border: 0.125rem solid #5c7aea;
+}
+
+.btn-signup {
+  display: none;
 }
 
 .main-image {
@@ -122,16 +138,21 @@ body {
 
 .introduction-container {
   padding-bottom: 2rem;
-  background-color: #3d56b2;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.introduction-container h1 {
-  color: #ffffff;
-  padding: 1.5rem;
+.introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.introduction h1 {
   text-align: center;
+  padding: 1.5rem 0;
+  width: 90%;
   font-weight: 400;
 }
 
@@ -145,6 +166,7 @@ body {
 .find-btn {
   cursor: pointer;
   background-color: transparent;
+  width: 12rem;
   padding: 0.5rem 1.5rem;
   font-size: 1.125rem;
   font-weight: 700;
@@ -153,12 +175,13 @@ body {
 }
 
 .btn-work {
-  background-color: #5c7aea;
-  border: 0.125rem solid #5c7aea;
+  color: #3d56b2;
+  border: 0.125rem solid #3d56b2;
 }
 
 .btn-service {
-  border: 0.125rem solid #ffffff;
+  background-color: #5c7aea;
+  border: 0.125rem solid #5c7aea;
 }
 
 .services-container {
@@ -261,4 +284,140 @@ body {
   border-radius: 0.5rem;
   font-size: 1.125rem;
   font-weight: 700;
+}
+
+@media (min-width: 47.9375rem) {
+  .nav {
+    padding: 1rem 2rem;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .search {
+    display: flex;
+  }
+
+  .search #browse {
+    border: none;
+    outline: none;
+    margin-right: 0.5rem;
+    width: 5rem;
+    font-family: "Poppins", sans-serif;
+    font-size: 0.875rem;
+    font-weight: 700;
+  }
+
+  .search button {
+    background: transparent;
+    width: 3rem;
+    border: 1px solid #e6e6e6;
+    border-right: none;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+  }
+
+  .search input {
+    width: 12rem;
+    height: 2.5rem;
+    border: 1px solid #e6e6e6;
+    outline: none;
+    border-left: none;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+  }
+
+  .logo {
+    font-size: 1.25rem;
+  }
+
+  .logo span::after {
+    height: 2rem;
+  }
+
+  .introduction h1 {
+    font-size: 2rem;
+    width: 80%;
+  }
+
+  .find-btns {
+    flex-direction: row;
+  }
+
+  .find-btn {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 89.9375rem) {
+  .nav {
+    padding: 2rem;
+  }
+
+  .logo {
+    font-size: 1.75rem;
+  }
+
+  .logo span::after {
+    height: 2.75rem;
+  }
+
+  .search {
+    display: flex;
+  }
+
+  .search #browse {
+    width: 6rem;
+    font-size: 1.125rem;
+  }
+
+  .search button {
+    width: 4rem;
+  }
+
+  .search input {
+    width: 30rem;
+    height: 3rem;
+    font-size: 1.125rem;
+  }
+
+  .user-login button {
+    width: 8rem;
+    font-size: 1.215rem;
+  }
+
+  .btn-signup {
+    display: block;
+    color: #ffffff;
+    background-color: #5c7aea;
+    border: 0.125rem solid #5c7aea;
+  }
+
+  .introduction-container {
+    flex-direction: row-reverse;
+    padding-bottom: 0;
+  }
+
+  .main-image {
+    width: 60%;
+  }
+
+  .introduction {
+    padding-left: 2rem;
+    align-items: flex-start;
+  }
+
+  .introduction h1 {
+    text-align: left;
+    padding-bottom: 4rem;
+    width: 100%;
+    font-size: 2.125rem;
+  }
+
+  .find-btn {
+    font-size: 1.5rem;
+    padding: 0.75rem 0;
+    width: 14rem;
+  }
 }
