--- a/landing-page.css
+++ b/landing-page.css
@@ -360,6 +360,25 @@ body {
   .find-btn {
     font-size: 1.25rem;
   }
+
+  .labels {
+    margin-left: 3rem;
+  }
+
+  .labels div h3 {
+    font-size: 2rem;
+  }
+
+  .labels div p {
+    width: 60%;
+    padding: 1rem 0 4rem 0;
+    font-size: 1rem;
+  }
+
+  .labels div button {
+    padding: 0.5rem 1.5rem;
+    font-size: 1.125rem;
+  }
 }
 
 @media (min-width: 89.9375rem) {
