--- a/landing-page.css
+++ b/landing-page.css
@@ -202,13 +202,14 @@ body {
   padding-bottom: 1rem;
   position: relative;
   width: 100%;
-  max-height: 40rem;
   overflow: hidden;
 }
 
 .services figure {
   display: flex;
   width: 100%;
+  min-height: 35rem;
+  max-height: 45rem;
   animation: services-slide 10s ease-in-out infinite;
 }
 
@@ -235,38 +236,38 @@ body {
 
 .labels div h3 {
   color: #ffffff;
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   font-weight: 700;
-  text-shadow: 0 0 0.25rem #000000;
+  text-shadow: 0 0 0.125rem #000000;
 }
 
 .labels div p {
-  color: #e6e6e6;
-  text-shadow: 0 0 0.25rem #000000;
-  padding: 0.5rem 0 2.5rem 0;
+  color: #ffffff;
+  padding: 1rem 0 3rem 0;
   width: 70%;
-  font-size: 0.875rem;
+  font-size: 1rem;
+  text-shadow: 0 0 0.125rem #000000;
 }
 
 .labels div button {
   cursor: pointer;
-  padding: 0.5rem 1rem;
-  color: #ffffff;
-  background-color: #14279b;
-  border: 0.125rem solid #14279b;
+  padding: 0.5rem 2rem;
+  color: #0c090a;
+  background-color: #2554c7;
+  border: none;
   border-radius: 0.25rem;
-  font-size: 0.875rem;
+  font-size: 1.125rem;
   font-weight: 700;
 }
 
 .services figure img {
   filter: brightness(0.4);
   width: 100%;
+  object-fit: cover;
   object-position: center;
 }
 
 .services-container h4 {
-  color: #3d56b2;
   width: 90%;
   font-size: 1.25rem;
   position: relative;
