--- a/landing-page.css
+++ b/landing-page.css
@@ -463,4 +463,26 @@ body {
     padding: 0.75rem 0;
     width: 14rem;
   }
+
+  .services figure {
+    max-height: 40rem;
+  }
+
+  .labels {
+    margin-left: 10rem;
+  }
+  .labels div h3 {
+    font-size: 3rem;
+  }
+
+  .labels div p {
+    width: 40%;
+    padding: 2rem 0 5rem 0;
+    font-size: 1.25rem;
+  }
+
+  .labels div button {
+    padding: 0.75rem 2.5rem;
+    font-size: 1.5rem;
+  }
 }
