--- a/landing-page.css
+++ b/landing-page.css
@@ -341,6 +341,7 @@ body {
   }
 
   .search input {
+    padding-right: 0.75rem;
     width: 15rem;
     height: 2.5rem;
     border: 1px solid var(--light-gray);
@@ -418,6 +419,7 @@ body {
   }
 
   .search input {
+    padding-right: 1rem;
     width: 30rem;
     height: 3rem;
     font-size: 1rem;
