--- a/landing-page.css
+++ b/landing-page.css
@@ -289,11 +289,12 @@ body {
 
 .btn-more-services {
   cursor: pointer;
-  padding: 0.5rem 1.25rem;
-  background-color: transparent;
-  color: var(--light-blue);
+  width: 12rem;
+  padding: 0.5rem 0;
+  color: white;
+  background-color: var(--light-blue);
   border: 0.125rem solid var(--light-blue);
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   font-size: 1.125rem;
   font-weight: 700;
 }
@@ -356,6 +357,10 @@ body {
 
   .services-container p {
     font-size: 1.125rem;
+  }
+
+  .btn-more-services {
+    font-size: 1.25rem;
   }
 
   .introduction h1 {
@@ -453,6 +458,12 @@ body {
 
   .main-image {
     width: 60%;
+  }
+
+  .btn-more-services {
+    width: 15rem;
+    padding: 0.75rem 0;
+    font-size: 1.5rem;
   }
 
   .introduction {
