--- a/landing-page.css
+++ b/landing-page.css
@@ -284,7 +284,7 @@ body {
 
 .services-container p {
   width: 90%;
-  padding: 1rem 0;
+  padding: 1rem 0 1.5rem 0;
 }
 
 .btn-more-services {
@@ -356,6 +356,7 @@ body {
   }
 
   .services-container p {
+    padding: 1rem 0 2rem 0;
     font-size: 1.125rem;
   }
 
