--- a/landing-page.css
+++ b/landing-page.css
@@ -110,7 +110,7 @@ body {
   height: 2rem;
   width: 100%;
   transform: skewX(-10deg);
-  background-color: var(--dark-blue);
+  background-color: var(--primary-blue);
 }
 
 .search {
