updated customer dark blue color

--- a/landing-page.css
+++ b/landing-page.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --dark-blue: #14279b;
+  --dark-blue: #233863;
   --primary-blue: #2b468b;
   --secondary-blue: #3d56b2;
   --light-blue: #5c7aea;
