--- a/landing-page.css
+++ b/landing-page.css
@@ -261,9 +261,9 @@ body {
   cursor: pointer;
   padding: 0.5rem 2rem;
   color: var(--dark-gray);
-  background-color: var(--dark-blue);
-  border: none;
-  border-radius: 0.25rem;
+  background-color: var(--light-blue);
+  border: 0.125rem solid var(--light-blue);
+  border-radius: 2rem;
   font-size: 1.125rem;
   font-weight: 700;
 }
