--- a/landing-page.css
+++ b/landing-page.css
@@ -284,16 +284,19 @@ body {
   display: none;
 }
 
-.main-image {
-  max-width: 100%;
-  max-height: 40rem;
-}
-
 .introduction-container {
-  padding-bottom: 2rem;
+  padding-top: 2rem;
+  width: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.main-image {
+  max-height: 25rem;
+  object-fit: cover;
+  object-position: center;
 }
 
 .introduction {
@@ -304,16 +307,17 @@ body {
 
 .introduction h1 {
   text-align: center;
-  padding: 1.5rem 0;
   width: 90%;
+  font-size: 1.75rem;
   font-weight: 400;
 }
 
 .find-btns {
+  padding-top: 2rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .find-btn {
@@ -511,15 +515,7 @@ body {
 
   .introduction h1 {
     font-size: 2rem;
-    width: 80%;
-  }
-
-  .find-btns {
-    flex-direction: row;
-  }
-
-  .find-btn {
-    font-size: 1.25rem;
+    width: 85%;
   }
 
   .labels {
