--- a/landing-page.css
+++ b/landing-page.css
@@ -600,33 +600,27 @@ body {
     border: 0.125rem solid var(--primary-blue);
   }
 
-  .services-container h4 {
-    font-size: 2rem;
-  }
-
-  .services-container p {
-    font-size: 1.5rem;
-  }
-
   .introduction-container {
-    flex-direction: row-reverse;
-    padding-bottom: 0;
-    width: 90%;
-    margin: auto;
+    height: 83vh;
+    width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+    position: relative;
   }
 
   .main-image {
-    width: 60%;
-  }
-
-  .btn-more-services {
-    width: 15rem;
-    padding: 0.75rem 0;
-    font-size: 1.5rem;
+    position: absolute;
+    top: 5%;
+    right: -20%;
+    width: 90%;
+    max-height: 45rem;
   }
 
   .introduction {
-    padding-left: 2rem;
+    z-index: 1;
+    padding-top: 6rem;
+    padding-left: 5rem;
+    width: 60%;
     align-items: flex-start;
   }
 
@@ -634,13 +628,17 @@ body {
     text-align: left;
     padding-bottom: 4rem;
     width: 100%;
-    font-size: 2.125rem;
+    font-size: 3rem;
+  }
+
+  .find-btns {
+    gap: 3rem;
   }
 
   .find-btn {
     font-size: 1.5rem;
     padding: 0.75rem 0;
-    width: 14rem;
+    width: 15rem;
   }
 
   .services-container h2 {
@@ -671,6 +669,20 @@ body {
 
   .labels div button {
     padding: 0.75rem 2.5rem;
+    font-size: 1.5rem;
+  }
+
+  .services-container h4 {
+    font-size: 2rem;
+  }
+
+  .services-container p {
+    font-size: 1.5rem;
+  }
+
+  .btn-more-services {
+    width: 15rem;
+    padding: 0.75rem 0;
     font-size: 1.5rem;
   }
 }
