--- a/landing-page.css
+++ b/landing-page.css
@@ -601,7 +601,7 @@ body {
   }
 
   .introduction-container {
-    height: 83vh;
+    height: 84vh;
     width: 100%;
     flex-direction: row;
     align-items: flex-start;
@@ -688,6 +688,23 @@ body {
 }
 
 @media (min-width: 119.9375rem) {
+  .introduction {
+    padding-top: 7rem;
+    padding-left: 10rem;
+    width: 55%;
+  }
+
+  .introduction h1 {
+    font-size: 3.5rem;
+  }
+
+  .main-image {
+    top: 0%;
+    right: -12%;
+    width: 77%;
+    max-height: 50rem;
+  }
+
   .services figure img {
     object-position: 0 30%;
   }
