--- a/landing-page.css
+++ b/landing-page.css
@@ -153,6 +153,9 @@ body {
 .nav {
   background-color: white;
   padding: 0.75rem;
+  z-index: 2;
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -222,7 +225,7 @@ body {
 }
 
 .introduction-container {
-  padding-top: 2rem;
+  padding-top: 6rem;
   width: 100%;
   overflow: hidden;
   display: flex;
