laptop layout fixed nav

--- a/landing-page.css
+++ b/landing-page.css
@@ -535,7 +535,8 @@ body {
   }
 
   .introduction-container {
-    height: 84vh;
+    padding-top: 10rem;
+    height: 100vh;
     width: 100%;
     flex-direction: row;
     align-items: flex-start;
@@ -544,7 +545,7 @@ body {
 
   .main-image {
     position: absolute;
-    top: 5%;
+    top: 15%;
     right: -20%;
     width: 90%;
     max-height: 45rem;
